kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-docker
  labels:
    app: java-docker
spec:
  selector:
    matchLabels:
      app: java-docker
  replicas: 5
  template:
    metadata:
      labels:
        app: java-docker
    spec:
      containers:
        - name: java-docker
          image: carlosportella16/java-docker:v1
          imagePullPolicy: Always 
          ports:
            - containerPort: 8080 

          resources:
            limits:
              memory: "300Mi" 
              cpu: "100m"
          readinessProbe:
            httpGet:
              path: /healthz 
              port: 8080 
            initialDelaySeconds: 10 
            periodSeconds: 5 

            # Probe de "liveness" verify the applications in execution
          livenessProbe:
            httpGet:
              path: /healthz 
              port: 8080 
            initialDelaySeconds: 30 
            periodSeconds: 60
