kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: java-docker 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
    - http: # Rule applied for HTTP requests
        paths:
          - pathType: Prefix # Path match type (prefix)
            path: / # Matching path "/"
            backend:
              service:
                name: java-docker-service # Backend service name
                port:
                  number: 8080 # Service port number
